# mongodb-service-template

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  aws.Dockerfile  buildspec.yml  docker-compose.aws.yml  docker-compose.yml  release.Dockerfile  test  test.Dockerfile
scripts/: build_release.sh  build_test.sh  package.sh  release.sh  test.sh
src/: lib.rs  main.rs  schema.rs
src/db/: mod.rs  mongo.rs
src/models/: embedded.rs  mod.rs  sample.rs
src/routes/: mod.rs
src/routes/graphql/: mod.rs
tests/: lib.rs
tests/mock/: samples.json
tests/routes/: health.rs
tests/schema/: fragments.rs  mod.rs
tests/schema/mutation/: embedded.rs  mod.rs  samples.rs
tests/schema/mutation/snapshots/: lib__schema__mutation__embedded__test__add_values_to_missing_sample.snap  lib__schema__mutation__embedded__test__add_values_to_sample.snap  lib__schema__mutation__embedded__test__remove_value_from_sample_existing.snap  lib__schema__mutation__embedded__test__remove_value_from_sample_existing_non_existing.snap  lib__schema__mutation__embedded__test__update_value_for_sample.snap  lib__schema__mutation__embedded__test__update_value_for_sample_non_existing.snap  lib__schema__mutation__samples__test__bad_update.snap  lib__schema__mutation__samples__test__create_existing_sample.snap  lib__schema__mutation__samples__test__create_sample.snap  lib__schema__mutation__samples__test__create_sample_all_samples.snap  lib__schema__mutation__samples__test__delete_existing_sample.snap  (+3 more)
tests/schema/query/: samples.rs
tests/utils/: mod.rs
(+7 files in other folders)
