[package]
name = "sample-project"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.2.0"
actix-rt = "1.1.1"
actix-web = { version = "2.0.0", features = ["openssl"] }
bson = "0.14.1"
cached = "0.12.0"
chrono = { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
jwt-validator = { git = "https://github.com/briandeboer/jwt-validator", tag = "v0.2.1" }
juniper = "0.14.2"
lazy_static = "1.4.0"
log = "0.4.11"
mongodb = "0.9.2"
mongodb-base-service = { version = "0.5.1", features = ["graphql"] }
mongodb-cursor-pagination = { version = "0.2.9", features = ["graphql"] }
num_cpus = "1.13.0"
serde = "1.0.115"
serde_json = "1.0.57"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
actix-service = "1.0.6"
bytes = "0.5.6"
insta = "0.16.1"
mongodb-base-service = { version = "0.5.1", features = ["graphql", "test"] }
